--- a/chuxiao.html
+++ b/chuxiao.html
@@ -17,7 +17,7 @@
             style="color: black;font-size: 35px;width: 80%;border-bottom: 1px solid #ccc;margin: auto;padding: auto;">
             
         </p>
-        <p style="color: black">白名单验证通过，该申请离校扫码1次，离校码只能使用一次，请不要重复打开</p>
+        <p style="color: black">学生：白名单验证通过，该申请离校扫码1次，离校码只能使用一次，请不要重复打开</p>
         
         <p id="nowDateTimeSpan" style="color: red;"></p>
         <img style="height:175px" src="img/yy.jpg">
